# asl-actions

./: README.md  action.yml  entrypoint.sh
.github/workflows/: docker.yaml  simple.yaml
actions/delete-workspace/: Dockerfile  action.yml  entrypoint.sh
example_workflows/: simple_catkin.yml
toy_example_package/: CMakeLists.txt  package.xml
toy_example_package/docker/: Dockerfile
toy_example_package/src/: publisher.cpp
